<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search" />
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/share"
                android:title="@string/share" />
            <item
                android:id="@+id/rate"
                android:icon="@drawable/rate"
                android:title="@string/rate" />
            <item
                android:id="@+id/remove"
                android:icon="@drawable/remove"
                android:title="@string/remove" />
        </menu>
    </item>

</menu>