<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/day_background_color"
    tools:context=".Login.Login">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/for_upper_button_width"
        android:layout_height="@dimen/for_upper_button_height"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:padding="@dimen/normal_padding"
        android:src="@drawable/back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_text"
        style="@style/for_heading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_marginTop="20dp"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@color/text_color" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="50dp"
        android:hint="@string/email"
        android:textColor="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLayout"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        android:textColor="@color/text_color"
        app:endIconMode="password_toggle"
        app:helperText="@string/password_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayout"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/register_underline"
        android:textAlignment="viewEnd"
        android:textColor="@color/link" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayout"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="40dp"
        android:padding="@dimen/normal_padding"
        android:text="@string/login_text"
        android:textSize="25dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/or"
        style="@style/for_heading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        android:padding="10dp"
        android:text="@string/login_with_google"
        app:icon="@drawable/google"
        app:iconGravity="textStart"
        app:iconSize="25dp" />
</RelativeLayout>